--- a/reward.Rmd
+++ b/reward.Rmd
@@ -22,27 +22,26 @@ To get a little extra push of motivation to use your devices in the way you inte
 
 One of the most popular tools for this is [Forest](https://www.forestapp.cc/) which lets you grow virtual trees during focus sessions - the trees die if you do not stick with your goal...
 
-```{r, out.width="30%"}
+```{r, out.width="50%"}
 knitr::include_graphics("figures/forest_iphone.png")
 knitr::include_graphics("figures/forest_android.png")
-knitr::include_graphics("figures/forest_chrome.png")
 ```
 
 Forest is available for [iOS](https://itunes.apple.com/app/forest-stay-focused-stop-phubbing/id866450515), [Android](https://play.google.com/store/apps/details?id=cc.forestapp), and as a [Chrome extension](https://chrome.google.com/webstore/detail/forest-stay-focused-be-pr/kjacjjdnoddnpbbcjilcajfhhbdhkpgk).
 
 Other options include [Feed the Goat (Chrome Extension)](https://docs.google.com/spreadsheets/d/1BVBCBOZQY_K7qYmDiSIail07F6D1iDG1OkoFyazb5Y4/edit#gid=777024457) or [Flora (iOS)](https://itunes.apple.com/us/app/flora-focus-study-pomodoro/id1225155794?mt=8&ign-mpt=uo%3D4):
 
-```{r, out.width="40%"}
+```{r, out.width="50%"}
 knitr::include_graphics("figures/flora.png")
 knitr::include_graphics("figures/feed_goat.png")
 ```
 
 ## Writing under pressure
-The online writing aapp [The Most Dangerous Writing App](https://www.themostdangerouswritingapp.com) helps you get into the flow of writing by adding pressure:
+The online writing app [The Most Dangerous Writing App](https://www.themostdangerouswritingapp.com) helps you get into the flow of writing by adding pressure:
 
-Set a target word count or duration, begin typing, and if you stop typing for more than a few seconds before you hit the goal, all you have typed is deleted!
+Set a target word count or length of time, begin typing, and if you stop for more than a few seconds before you hit your goal, all you have typed is deleted!
 
-Perfect for simulating the feeling of being so close to a deadline that procrastination is no longer an option!
+Perfect for simulating the feeling of being so close to a deadline that there's no time left to procrastinate!
 
 ```{r}
 knitr::include_graphics("figures/worlds_dangerous.png")
